--- a/index.html
+++ b/index.html
@@ -10,22 +10,72 @@
                         
             <div class="redes">
                 <a href="https://github.com/anahi2217/anahi2217.github.io">
-                <img src="img/logo.png" height="100px"; alt="Logo Juntas aprendemos";><!--hspace="200px";-->
+                    <img src="img/logo.png" height="100px"; alt="Logo Juntas aprendemos";><!--hspace="200px";-->
                 </a>
-                <a href="hhttps://www.linkedin.com/in/anah%C3%AD-mart%C3%ADn-del-campo-g%C3%B3mez-b94ab216b">
-                <img src="img/LinkedIn.png" width="70"; height="70"; hspace="30px"; alt="LinkedIn">
+                <div class="redes1">
+                    <a href="hhttps://www.linkedin.com/in/anah%C3%AD-mart%C3%ADn-del-campo-g%C3%B3mez-b94ab216b">
+                    <img src="img/LinkedIn.png" width="70"; height="70"; hspace="30px"; alt="LinkedIn">
                 </a>    
                 <a href="hhttps://www.facebook.com/anahi.m.gomez">
-                <img src="img/Facebook.png" width="70"; height="70"; hspace="30px"; alt="Facebook">
+                    <img src="img/Facebook.png" width="70"; height="70"; hspace="30px"; alt="Facebook">
                 </a>    
                 <a href="https://wa.me/523323104265?text=Me%20interesa%20contactarme%20contigo%20por%20qué%20vi%20tu%20página%20de%20mujeres%20y%20la%20ciencia">
-                <img src="img/WhatsApp.png" width="70"; height="70"; hspace="30px"; alt="WhatsApp">
-                </a>   
-                <a id=busqueda>
-                    <input class="busqueda" type="search" name="busqueda" placeholder="html, css, java...">
-                    <input class="busqueda" type="submit" value="Buscar">
-                </a> 
+                    <img src="img/WhatsApp.png" width="70"; height="70"; hspace="30px"; alt="WhatsApp">
+                </a> </div> 
+                <FORM class="busqueda" method=GET action="http://www.google.com/search">
+                <A HREF="http://www.google.com/">
+                <IMG SRC="http://www.google.com/logos/Logo_40wht.gif" ALT="Google"></A>
+                <INPUT TYPE=text name=q placeholder="html, css, java..."size=15 maxlength=255 value="">
+                <INPUT type=submit name=btnG VALUE="Busqueda">
+                </FORM>
+
             </div>
+
+            <nav class="nav">
+                <ul>
+                    <li><a href="index.html">Juntas aprendemos</a></li>
+                    <li><a href="python.html">Python</a>
+                        <!--<ul><li><a href="python.html">Python: Paginas donde encontrarás más información</a></li>
+                            <li><a href="python.html">Python: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="python.html">Python: Paginas de ejercicios prácticos</a></li></li>
+                        </ul>>-->
+                    </li>
+                    <li><a href="html.html">HTML</a>
+                        <!--<ul>
+                            <li><a href="html.html">HTML: Paginas donde encontrarás más información</a></li>
+                            <li><a href="html.html">HTML: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="html.html">HTML: Paginas de ejercicios prácticos</a></li></li>
+                         </ul></li>>-->
+                    <li><a href="css.html">CSS</a>
+                        <!--<ul>
+                            <li><a href="css.html">CSS: Paginas donde encontrarás más información</a></li>
+                            <li><a href="css.html">CSS: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="css.html">CSS: Paginas de ejercicios prácticos</a></li></li>
+                        </ul>>-->
+                    </li>
+                    <li><a href="JavaScrcipt.html">JavaScrcipt</a>
+                        <!--<ul>
+                            <li><a href="JavaScrcipt.html">JavaScrcipt: Paginas donde encontrarás más información</a></li>
+                            <li><a href="JavaScrcipt.html">JavaScrcipt: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="JavaScrcipt.html">JavaScrcipt: Paginas de ejercicios prácticos</a></li></li>
+                        </ul>>-->
+                    </li>
+                    <li><a href="c++.html">C++</a>
+                        <!--<ul>
+                            <li><a href="c++.html">C++: Paginas donde encontrarás más información</a></li>
+                            <li><a href="c++.html">C++: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="c++.html">C++: Paginas de ejercicios prácticos</a></li></li>
+                        </ul>>-->
+                    </li>
+                    <li><a href="java.html">Java</a>
+                        <!--<ul>
+                            <li><a href="java.html">Java: Paginas donde encontrarás más información</a></li>
+                            <li><a href="java.html">Java: Paginas donde encontrarás los fundamentos</a></li>
+                            <li><a href="java.html">Java: Paginas de ejercicios prácticos</a></li></li>
+                        </ul>-->
+                    </li>
+                </ul>
+            </nav>
                
 
 
